--- a/config-client/config-client-dev.properties
+++ b/config-client/config-client-dev.properties
@@ -1,4 +1,1 @@
-spring.datasource.url=jdbc:mysql://192.168.109.1:3306/egrand-zipkin?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=123456
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
+hello=dev
