--- a/config-client/egrand-wfw-zipkin-dev.properties
+++ b/config-client/egrand-wfw-zipkin-dev.properties
@@ -1,2 +1,2 @@
-eureka.client.serviceUrl.defaultZone=http://192.168.109.128:19001/eureka/
+eureka.client.serviceUrl.defaultZone=http://192.168.109.128:19001/eureka/1
 hello=hello world
