--- a/config-client/zipkin-dev.properties
+++ b/config-client/zipkin-dev.properties
@@ -1,3 +1,4 @@
+hello=hello world
 eureka.instance.prefer-ip-address=false
 #eureka.instance.ip-address=false
 eureka.instance.hostname=zipkin.wfw.com
