--- a/config-client/zipkin-dev.properties
+++ b/config-client/zipkin-dev.properties
@@ -1,4 +1,4 @@
-hello=hello world
+hello=hello world11
 eureka.instance.prefer-ip-address=false
 #eureka.instance.ip-address=false
 eureka.instance.hostname=zipkin.wfw.com
