--- a/config-client/zipkin-dev.properties
+++ b/config-client/zipkin-dev.properties
@@ -2,3 +2,13 @@ hello=hello world222
 
 #注册中心地址
 eureka.client.serviceUrl.defaultZone=http://192.168.109.128:19001/eureka/
+
+zipkin.storage.type=mysql
+#数据库配置
+#spring.datasource.url=jdbc:mysql://192.168.25.3:3307/zipkin?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://192.168.109.1:3306/egrand-zipkin?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
