--- a/config-client/zipkin-dev.properties
+++ b/config-client/zipkin-dev.properties
@@ -1,5 +1,11 @@
 hello=hello world222333
 
+eureka.instance.prefer-ip-address=false
+#eureka.instance.ip-address=false
+eureka.instance.hostname=zipkin.wfw.com
+eureka.instance.lease-expiration-duration-in-seconds=10
+eureka.instance.lease-renewal-interval-in-seconds=10
+
 #注册中心地址
 eureka.client.serviceUrl.defaultZone=http://192.168.109.128:19001/eureka/
 
@@ -17,3 +23,11 @@ spring.datasource.url=jdbc:mysql://192.168.109.1:3306/egrand-zipkin?useUnicode=t
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
+
+#zipkin配置参数
+#spring.sleuth.sampler.percentage=1.0
+spring.sleuth.enabled=false
+
+#关闭权限
+management.security.enabled=false
+security.basic.enabled=false
