--- a/config-client/zipkin-dev.properties
+++ b/config-client/zipkin-dev.properties
@@ -1,6 +1,6 @@
 hello=hello world222333
 
-eureka.instance.prefer-ip-address=false
+eureka.instance.prefer-ip-address=true
 #eureka.instance.ip-address=false
 eureka.instance.hostname=zipkin.wfw.com
 eureka.instance.lease-expiration-duration-in-seconds=10
