--- a/config-client/zipkin-dev.properties
+++ b/config-client/zipkin-dev.properties
@@ -1,7 +1,7 @@
 hello=hello world222333
 
 eureka.instance.prefer-ip-address=true
-#eureka.instance.ip-address=false
+eureka.instance.ip-address=192.168.109.1
 eureka.instance.hostname=zipkin.wfw.com
 eureka.instance.lease-expiration-duration-in-seconds=10
 eureka.instance.lease-renewal-interval-in-seconds=10
