--- a/config-client/zipkin-dev.properties
+++ b/config-client/zipkin-dev.properties
@@ -2,7 +2,7 @@ hello=hello world222333
 
 eureka.instance.prefer-ip-address=true
 eureka.instance.ip-address=192.168.109.1
-eureka.instance.hostname=${spring.cloud.client.ipAddress}
+eureka.instance.instance-id=${spring.cloud.client.ipAddress}:${server.port}
 eureka.instance.lease-expiration-duration-in-seconds=10
 eureka.instance.lease-renewal-interval-in-seconds=10
 
