--- a/config-client/zipkin-dev.properties
+++ b/config-client/zipkin-dev.properties
@@ -1,5 +1,8 @@
 hello=hello world222333
 
+server.port=21041
+spring.application.name=zipkin
+
 eureka.instance.prefer-ip-address=true
 eureka.instance.ip-address=192.168.109.1
 eureka.instance.instance-id=${spring.cloud.client.ipAddress}:${server.port}
