--- a/config-client/zipkin-dev.properties
+++ b/config-client/zipkin-dev.properties
@@ -1,4 +1,4 @@
-hello=dev
+hello=dev111
 
 server.port=21041
 spring.application.name=zipkin
@@ -11,7 +11,6 @@ eureka.instance.lease-renewal-interval-in-seconds=10
 
 #注册中心地址
 eureka.client.serviceUrl.defaultZone=http://192.168.109.128:19001/eureka/
-
 
 #配置中心消息总线配置
 spring.cloud.bus.trace.enabled=true
