--- a/config-client/zipkin-prod.properties
+++ b/config-client/zipkin-prod.properties
@@ -1,11 +1,11 @@
-hello=pro11
+hello=prod
 
 server.port=21041
 spring.application.name=zipkin
 
 eureka.instance.prefer-ip-address=true
 eureka.instance.ip-address=192.168.109.128
-eureka.instance.instance-id=${spring.cloud.client.ipAddress}:${server.port}
+eureka.instance.instance-id=${eureka.instance.ip-address}:${server.port}
 eureka.instance.lease-expiration-duration-in-seconds=10
 eureka.instance.lease-renewal-interval-in-seconds=10
 
