--- a/config-client/zipkin-test.properties
+++ b/config-client/zipkin-test.properties
@@ -5,7 +5,7 @@ spring.application.name=zipkin
 
 eureka.instance.prefer-ip-address=true
 eureka.instance.ip-address=192.168.109.128
-eureka.instance.instance-id=${spring.cloud.client.ipAddress}:${server.port}
+eureka.instance.instance-id=${eureka.instance.ip-address}:${server.port}
 eureka.instance.lease-expiration-duration-in-seconds=10
 eureka.instance.lease-renewal-interval-in-seconds=10
 
