--- a/config-client/turbine-dev.properties
+++ b/config-client/turbine-dev.properties
@@ -21,7 +21,7 @@ spring.rabbitmq.username=wiki
 spring.rabbitmq.password=wiki2012
 
 turbine.aggregator.clusterConfig=default
-#turbine.appConfig=EUREKA-DEMO
+turbine.appConfig=EUREKA-DEMO
 turbine.aggregator.cluster-config=default
 turbine.cluster-name-expression=new String("default")
 #turbine.instanceUrlSuffix=manage/hystrix.stream
