--- a/config-client/admin-dev.properties
+++ b/config-client/admin-dev.properties
@@ -24,7 +24,7 @@ eureka.instance.secure-port=${server.port}
 #eureka.instance.status-page-url=http://${eureka.instance.hostname}:${server.port}/swagger-ui.html
 
 #注册中心地址
-eureka.client.serviceUrl.defaultZone=http://192.168.109.128:19001/eureka/
+eureka.client.serviceUrl.defaultZone=http://192.168.109.128:19001/eureka/,http://192.168.109.128:19002/eureka/,http://192.168.109.128:19003/eureka/
 
 #配置中心消息总线配置
 spring.cloud.bus.trace.enabled=true
