--- a/config-client/eureka-demo-prod.properties
+++ b/config-client/eureka-demo-prod.properties
@@ -10,7 +10,7 @@ eureka.instance.lease-expiration-duration-in-seconds=10
 eureka.instance.lease-renewal-interval-in-seconds=10
 
 #注册中心地址
-eureka.client.serviceUrl.defaultZone=http://192.168.109.128:19001/eureka/
+eureka.client.serviceUrl.defaultZone=http://192.168.109.128:19001/eureka/,http://192.168.109.128:19002/eureka/,http://192.168.109.128:19003/eureka/
 
 #配置中心消息总线配置
 spring.cloud.bus.trace.enabled=true
