--- a/config-client/zuul-test.properties
+++ b/config-client/zuul-test.properties
@@ -46,12 +46,12 @@ management.security.enabled=false
 security.basic.enabled=false
 
 
-security.oauth2.resource.user-info-uri=http://192.168.109.128:21031/uaa/users/current
+security.oauth2.resource.user-info-uri=http://192.168.109.1:21032/uaa/users/current
 
-security.oauth2.client.clientId=service-hi
+security.oauth2.client.clientId=egrand-service-user
 security.oauth2.client.clientSecret=123456
-security.oauth2.client.accessTokenUri=http://192.168.109.128:21031/uaa/oauth/token
-security.oauth2.client.userAuthorizationUri=http://192.168.109.128:21031/uaa/oauth/authorize
+security.oauth2.client.accessTokenUri=http://192.168.109.1:21032/uaa/oauth/token
+security.oauth2.client.userAuthorizationUri=http://192.168.109.1:21032/uaa/oauth/authorize
 security.oauth2.client.grant-type=password,client_credentials
 security.oauth2.client.scope=server
 
