--- a/config-client/oauth-user-dev.properties
+++ b/config-client/oauth-user-dev.properties
@@ -1,10 +1,10 @@
 hello=dev
 
-server.port=21041
-spring.application.name=zipkin
+server.port=8762
+spring.application.name=oauth-user
 
 eureka.instance.prefer-ip-address=true
-eureka.instance.ip-address=192.168.109.128
+eureka.instance.ip-address=192.168.109.1
 eureka.instance.instance-id=${eureka.instance.ip-address}:${server.port}
 eureka.instance.lease-expiration-duration-in-seconds=10
 eureka.instance.lease-renewal-interval-in-seconds=10
@@ -20,17 +20,21 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=wiki
 spring.rabbitmq.password=wiki2012
 
-#数据库配置
-zipkin.storage.type=mysql
-spring.datasource.url=jdbc:mysql://192.168.109.1:3306/egrand-zipkin?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8&serverTimezone=UTC
+#oauth2数据库连接配置
+spring.datasource.url=jdbc:mysql://192.168.109.1:3306/spring-cloud-auth?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
-#zipkin配置参数
-#spring.sleuth.sampler.percentage=1.0
-spring.sleuth.enabled=false
+#hibernate配置
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
-#关闭权限
-management.security.enabled=false
-security.basic.enabled=false
+security.oauth2.resource.user-info-uri=http://192.168.109.1:21032/users/current
+security.oauth2.client.clientId=oauth-user
+security.oauth2.client.clientSecret=123456
+security.oauth2.client.accessTokenUri=http://192.168.109.1:21032/oauth/token
+security.oauth2.client.grant-type=password,client_credentials
+security.oauth2.client.scope=server
+
