--- a/config-client/oauth-user-dev.properties
+++ b/config-client/oauth-user-dev.properties
@@ -35,6 +35,7 @@ security.oauth2.resource.user-info-uri=http://192.168.109.1:21032/users/current
 security.oauth2.client.clientId=oauth-user
 security.oauth2.client.clientSecret=123456
 security.oauth2.client.accessTokenUri=http://192.168.109.1:21032/oauth/token
+security.oauth2.client.userAuthorizationUri=http://192.168.109.1:21032/oauth/authorize
 security.oauth2.client.grant-type=password,client_credentials
 security.oauth2.client.scope=server
 
