--- a/config-client/oauth-dev.properties
+++ b/config-client/oauth-dev.properties
@@ -1,7 +1,7 @@
 hello=dev
 
-server.port=21032
-spring.application.name=oauth
+server.port=21031
+spring.application.name=auth
 
 eureka.instance.prefer-ip-address=true
 eureka.instance.ip-address=192.168.109.1
