--- a/config-client/oauth-user-prod.properties
+++ b/config-client/oauth-user-prod.properties
@@ -1,7 +1,7 @@
 hello=prod
 
 server.port=8762
-spring.application.name=oauth-user
+spring.application.name=service-hi
 
 eureka.instance.prefer-ip-address=true
 eureka.instance.ip-address=192.168.109.1
@@ -31,10 +31,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
-security.oauth2.resource.user-info-uri=http://192.168.109.1:21032/users/current
-security.oauth2.client.clientId=oauth-user
+security.oauth2.resource.user-info-uri=http://192.168.109.1:21031/users/current
+security.oauth2.client.clientId=service-hi
 security.oauth2.client.clientSecret=123456
-security.oauth2.client.accessTokenUri=http://192.168.109.1:21032/oauth/token
+security.oauth2.client.accessTokenUri=http://192.168.109.1:21031/oauth/token
 security.oauth2.client.grant-type=password,client_credentials
 security.oauth2.client.scope=server
 
