--- a/config-client/zuul-prod.properties
+++ b/config-client/zuul-prod.properties
@@ -46,12 +46,12 @@ management.security.enabled=false
 security.basic.enabled=false
 
 
-security.oauth2.resource.user-info-uri=http://192.168.109.1:21032/users/current
+security.oauth2.resource.user-info-uri=http://192.168.109.1:21031/users/current
 
-security.oauth2.client.clientId=oauth-user
+security.oauth2.client.clientId=service-hi
 security.oauth2.client.clientSecret=123456
-security.oauth2.client.accessTokenUri=http://192.168.109.1:21032/oauth/token
-security.oauth2.client.userAuthorizationUri=http://192.168.109.1:21032/oauth/authorize
+security.oauth2.client.accessTokenUri=http://192.168.109.1:21031/oauth/token
+security.oauth2.client.userAuthorizationUri=http://192.168.109.1:21031/oauth/authorize
 security.oauth2.client.grant-type=password,client_credentials
 security.oauth2.client.scope=server
 
