--- a/config-client/oauth-test.properties
+++ b/config-client/oauth-test.properties
@@ -10,6 +10,7 @@ eureka.instance.instance-id=${eureka.instance.ip-address}:${server.port}
 eureka.instance.lease-expiration-duration-in-seconds=10
 #发呆时间，即服务续约到期时间（缺省为90s）
 eureka.instance.lease-renewal-interval-in-seconds=10
+eureka.client.fetch-registry=true
 
 #注册中心地址
 eureka.client.serviceUrl.defaultZone=http://192.168.109.128:19001/eureka/,http://192.168.109.128:19002/eureka/,http://192.168.109.128:19003/eureka/
