--- a/config-client/oauth-test.properties
+++ b/config-client/oauth-test.properties
@@ -34,5 +34,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
+security.oauth2.resource.filter-order=3
+
 
 
