--- a/config-client/eureka-demo-dev.properties
+++ b/config-client/eureka-demo-dev.properties
@@ -32,3 +32,10 @@ endpoints.actuator.sensitive=false
 
 endpoints.beans.sensitive=false
 endpoints.beans.enabled=true
+
+security.oauth2.resource.user-info-uri=http://192.168.109.1:21031/users/current
+security.oauth2.client.clientId=service-hi
+security.oauth2.client.clientSecret=123456
+security.oauth2.client.accessTokenUri=http://192.168.109.1:21031/oauth/token
+security.oauth2.client.grant-type=password,client_credentials
+security.oauth2.client.scope=server
