--- a/config-client/zuul-dev.properties
+++ b/config-client/zuul-dev.properties
@@ -81,7 +81,7 @@ zuul.routes.nbjcpt-message.serviceId=nbjcpt-message
 
 
 # zuul.ratelimit.key-prefix: your-prefix  #对应用来标识请求的key的前缀
-zuul.ratelimit.enabled=false
+zuul.ratelimit.enabled=true
 #对应存储类型（用来存储统计信息）REDIS IN_MEMORY
 zuul.ratelimit.repository=REDIS
 #代理之后
