--- a/config-client/oauth-test.properties
+++ b/config-client/oauth-test.properties
@@ -29,6 +29,16 @@ spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
+# REDIS (RedisProperties)
+# Redis数据库索引（默认为0）
+#spring.redis.database=0
+# Redis服务器地址
+spring.redis.host=192.168.109.128
+# Redis服务器连接端口
+spring.redis.port=6379
+# Redis服务器连接密码（默认为空）
+spring.redis.password=
+
 #hibernate配置
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
