--- a/config-client/oauth-test.properties
+++ b/config-client/oauth-test.properties
@@ -46,5 +46,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 security.oauth2.resource.filter-order=3
 
+feign.hystrix.enabled=true
+
 
 
