--- a/config-client/zuul-dev.properties
+++ b/config-client/zuul-dev.properties
@@ -22,6 +22,7 @@ spring.rabbitmq.password=wiki2012
 
 ribbon.eureka.enabled=true
 feign.hystrix.enabled=true
+hystrix.command.default.execution.isolation.strategy=SEMAPHORE
 
 zuul.max.host.connections=500
 zuul.host.socket-timeout-millis=60000
