--- a/config-client/zuul-dev.properties
+++ b/config-client/zuul-dev.properties
@@ -22,7 +22,6 @@ spring.rabbitmq.password=wiki2012
 
 ribbon.eureka.enabled=true
 feign.hystrix.enabled=true
-hystrix.command.default.execution.isolation.strategy=SEMAPHORE
 
 zuul.max.host.connections=500
 zuul.host.socket-timeout-millis=60000
@@ -32,7 +31,7 @@ ribbon.ReadTimeout=60000
 ribbon.ConnectTimeout=60000
 
 zuul.sensitive-headers=Cookie,Set-Cookie,Authorization
-#hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
 #hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=10000
 #hystrix.command.default.execution.timeout.enabled=false
 
