--- a/config-client/oauth-user-dev.properties
+++ b/config-client/oauth-user-dev.properties
@@ -38,4 +38,5 @@ security.oauth2.client.clientSecret=123456
 security.oauth2.client.accessTokenUri=http://192.168.109.1:21031/oauth/token
 security.oauth2.client.grant-type=password,client_credentials
 security.oauth2.client.scope=server
+security.oauth2.client.user-authorization-uri=http://192.168.109.1:21031/oauth/authorize
 
