--- a/config-client/oauth-user-dev.properties
+++ b/config-client/oauth-user-dev.properties
@@ -36,7 +36,7 @@ security.oauth2.resource.user-info-uri=http://192.168.109.1:21031/users/current
 security.oauth2.client.clientId=service-hi
 security.oauth2.client.clientSecret=123456
 security.oauth2.client.accessTokenUri=http://192.168.109.1:21031/oauth/token
-security.oauth2.client.grant-type=password,client_credentials
+security.oauth2.client.grant-type=password
 security.oauth2.client.scope=server
 security.oauth2.client.user-authorization-uri=http://192.168.109.1:21031/oauth/authorize
 
