--- a/config-client/oauth-user-dev.properties
+++ b/config-client/oauth-user-dev.properties
@@ -31,7 +31,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
-security.oauth2.resource.jwt.key-uri=http://192.168.109.1:21031/oauth/token_key
+#security.oauth2.resource.jwt.key-uri=http://192.168.109.1:21031/oauth/token_key
 security.oauth2.resource.user-info-uri=http://192.168.109.1:21031/users/current
 security.oauth2.client.clientId=service-hi
 security.oauth2.client.clientSecret=123456
