--- a/config-client/ram-dev.properties
+++ b/config-client/ram-dev.properties
@@ -11,6 +11,7 @@ eureka.instance.lease-expiration-duration-in-seconds=10
 #发呆时间，即服务续约到期时间（缺省为90s）
 eureka.instance.lease-renewal-interval-in-seconds=10
 eureka.client.fetch-registry=true
+eureka.instance.status-page-url=http://${eureka.instance.ip-address}:${server.port}/swagger-ui.html
 
 #注册中心地址
 eureka.client.serviceUrl.defaultZone=http://192.168.109.128:19001/eureka/,http://192.168.109.128:19002/eureka/,http://192.168.109.128:19003/eureka/
@@ -33,3 +34,7 @@ spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+#swagger
+global.swagger.import=true
+global.swagger.path=com.ihyht.alyxjs.kfzpt.portal
