--- a/config-client/ram-dev.properties
+++ b/config-client/ram-dev.properties
@@ -37,4 +37,4 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 #swagger
 global.swagger.import=true
-global.swagger.path=com.ihyht.alyxjs.kfzpt.portal
+global.swagger.path=com.egrand.wfw
