--- a/config-client/ram-dev.properties
+++ b/config-client/ram-dev.properties
@@ -38,3 +38,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 #swagger
 global.swagger.import=true
 global.swagger.path=com.egrand.wfw
+
+#auth2
+security.oauth2.resource.id=ram
+security.oauth2.resource.user-info-uri=http://192.168.109.1:21031/users/current
