--- a/config-client/ram-dev.properties
+++ b/config-client/ram-dev.properties
@@ -1,7 +1,7 @@
 hello=dev
 
 server.port=19013
-spring.application.name=ram
+spring.application.name=egrand-ram
 
 eureka.instance.prefer-ip-address=true
 eureka.instance.ip-address=192.168.109.1
@@ -42,3 +42,4 @@ global.swagger.path=com.egrand.wfw
 #auth2
 security.oauth2.resource.id=ram
 security.oauth2.resource.user-info-uri=http://192.168.109.1:21031/users/current
+myoauth.white-list=["/user/query/**"]
