--- a/config-client/ram-dev.properties
+++ b/config-client/ram-dev.properties
@@ -42,4 +42,4 @@ global.swagger.path=com.egrand.wfw
 #auth2
 security.oauth2.resource.id=ram
 security.oauth2.resource.user-info-uri=http://192.168.109.1:21031/users/current
-myoauth.white-list=["/user/query/**", "/role/query/**"]
+myoauth.white-list={"/user/query/**", "/role/query/**"}
