--- a/config-client/oauth-user-prod.properties
+++ b/config-client/oauth-user-prod.properties
@@ -1,7 +1,7 @@
 hello=prod
 
 server.port=8762
-spring.application.name=service-hi
+spring.application.name=auth-user
 
 eureka.instance.prefer-ip-address=true
 eureka.instance.ip-address=192.168.109.1
