--- a/config-client/oauth-user-test.properties
+++ b/config-client/oauth-user-test.properties
@@ -20,21 +20,16 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=wiki
 spring.rabbitmq.password=wiki2012
 
-#oauth2数据库连接配置
-spring.datasource.url=jdbc:mysql://192.168.109.1:3306/spring-cloud-auth?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=123456
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-
 #hibernate配置
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
+#security.oauth2.resource.jwt.key-uri=http://192.168.109.1:21031/oauth/token_key
 security.oauth2.resource.user-info-uri=http://192.168.109.1:21031/users/current
 security.oauth2.client.clientId=service-hi
 security.oauth2.client.clientSecret=123456
 security.oauth2.client.accessTokenUri=http://192.168.109.1:21031/oauth/token
-security.oauth2.client.grant-type=password,client_credentials
+security.oauth2.client.grant-type=password
 security.oauth2.client.scope=server
-
+security.oauth2.client.user-authorization-uri=http://192.168.109.1:21031/oauth/authorize
