--- a/config-client/oauth-user-dev.properties
+++ b/config-client/oauth-user-dev.properties
@@ -27,6 +27,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 #security.oauth2.resource.jwt.key-uri=http://192.168.109.1:21031/oauth/token_key
 security.oauth2.resource.user-info-uri=http://192.168.109.1:21031/users/current
+security.oauth2.client.id=outh-user
 security.oauth2.client.clientId=service-hi
 security.oauth2.client.clientSecret=123456
 security.oauth2.client.accessTokenUri=http://192.168.109.1:21031/oauth/token
