--- a/config-client/oauth-user-dev.properties
+++ b/config-client/oauth-user-dev.properties
@@ -31,6 +31,6 @@ security.oauth2.client.id=outh-user
 security.oauth2.client.clientId=service-hi
 security.oauth2.client.clientSecret=123456
 security.oauth2.client.accessTokenUri=http://192.168.109.1:21031/oauth/token
-security.oauth2.client.grant-type=client_credentials
+security.oauth2.client.grant-type=password
 security.oauth2.client.scope=server
 security.oauth2.client.user-authorization-uri=http://192.168.109.1:21031/oauth/authorize
