--- a/config-client/oauth-dev.properties
+++ b/config-client/oauth-dev.properties
@@ -56,8 +56,8 @@ security.oauth2.client.clientSecret=123456
 security.oauth2.client.accessTokenUri=http://192.168.109.1:21031/oauth/token
 security.oauth2.client.userAuthorizationUri=http://192.168.109.1:21031/oauth/authorize
 
-egrand.security.oauth2.client.clientId=service-hi
-egrand.security.oauth2.client.clientSecret=123456
-egrand.security.oauth2.client.accessTokenUri=http://192.168.109.1:21031/oauth/token
-egrand.security.oauth2.client.userAuthorizationUri=http://192.168.109.1:21031/oauth/authorize
-egrand.security.oauth2.client.clientAuthenticationScheme=header
+egrand.oauth2.client.clientId=service-hi
+egrand.oauth2.client.clientSecret=123456
+egrand.oauth2.client.accessTokenUri=http://192.168.109.1:21031/oauth/token
+egrand.oauth2.client.userAuthorizationUri=http://192.168.109.1:21031/oauth/authorize
+egrand.oauth2.client.clientAuthenticationScheme=header
