--- a/config-client/oauth-user-prod.properties
+++ b/config-client/oauth-user-prod.properties
@@ -27,9 +27,16 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 #security.oauth2.resource.jwt.key-uri=http://192.168.109.1:21031/oauth/token_key
 security.oauth2.resource.user-info-uri=http://192.168.109.1:21031/users/current
+security.oauth2.client.id=outh-user
 security.oauth2.client.clientId=service-hi
 security.oauth2.client.clientSecret=123456
 security.oauth2.client.accessTokenUri=http://192.168.109.1:21031/oauth/token
 security.oauth2.client.grant-type=password
 security.oauth2.client.scope=server
 security.oauth2.client.user-authorization-uri=http://192.168.109.1:21031/oauth/authorize
+
+egrand.oauth2.client.clientId=service-hi
+egrand.oauth2.client.clientSecret=123456
+egrand.oauth2.client.accessTokenUrl=http://192.168.109.1:21031/oauth/token
+egrand.oauth2.client.userAuthorizationUri=http://192.168.109.1:21031/oauth/authorize
+egrand.oauth2.client.clientAuthenticationScheme=header
