--- a/config-client/oauth-prod.properties
+++ b/config-client/oauth-prod.properties
@@ -55,5 +55,9 @@ security.oauth2.client.clientId=service-hi
 security.oauth2.client.clientSecret=123456
 security.oauth2.client.accessTokenUri=http://192.168.109.1:21031/oauth/token
 security.oauth2.client.userAuthorizationUri=http://192.168.109.1:21031/oauth/authorize
-security.oauth2.client.grant-type=password,client_credentials
-security.oauth2.client.scope=server
+
+egrand.oauth2.client.clientId=service-hi
+egrand.oauth2.client.clientSecret=123456
+egrand.oauth2.client.accessTokenUrl=http://192.168.109.1:21031/oauth/token
+egrand.oauth2.client.userAuthorizationUri=http://192.168.109.1:21031/oauth/authorize
+egrand.oauth2.client.clientAuthenticationScheme=header
