--- a/config-client/oauth-user-dev.properties
+++ b/config-client/oauth-user-dev.properties
@@ -34,3 +34,9 @@ security.oauth2.client.accessTokenUri=http://192.168.109.1:21031/oauth/token
 security.oauth2.client.grant-type=password
 security.oauth2.client.scope=server
 security.oauth2.client.user-authorization-uri=http://192.168.109.1:21031/oauth/authorize
+
+egrand.oauth2.client.clientId=service-hi
+egrand.oauth2.client.clientSecret=123456
+egrand.oauth2.client.accessTokenUrl=http://192.168.109.1:21031/oauth/token
+egrand.oauth2.client.userAuthorizationUri=http://192.168.109.1:21031/oauth/authorize
+egrand.oauth2.client.clientAuthenticationScheme=header
