--- a/config-client/ram-dev.properties
+++ b/config-client/ram-dev.properties
@@ -37,7 +37,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 #swagger
 global.swagger.import=true
-global.swagger.path=com.egrand.wfw
+global.swagger.path=com.egrand
 
 #auth2
 security.oauth2.resource.id=ram
