--- a/config-client/oauth-test.properties
+++ b/config-client/oauth-test.properties
@@ -61,3 +61,10 @@ egrand.oauth2.client.clientSecret=123456
 egrand.oauth2.client.accessTokenUrl=http://192.168.109.1:21031/oauth/token
 egrand.oauth2.client.userAuthorizationUri=http://192.168.109.1:21031/oauth/authorize
 egrand.oauth2.client.clientAuthenticationScheme=header
+
+#thymeleaf
+spring.thymeleaf.cache=false
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.mode=LEGACYHTML5
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
