--- a/config-client/oauth-dev.properties
+++ b/config-client/oauth-dev.properties
@@ -62,6 +62,9 @@ egrand.oauth2.client.accessTokenUrl=http://192.168.109.1:21031/oauth/token
 egrand.oauth2.client.userAuthorizationUri=http://192.168.109.1:21031/oauth/authorize
 egrand.oauth2.client.clientAuthenticationScheme=header
 
+egrand.client.oauth2.admin.client-id=service-hi
+egrand.client.oauth2.admin.client-secret=123456
+
 #thymeleaf
 spring.thymeleaf.cache=false
 spring.thymeleaf.encoding=UTF-8
