--- a/config-client/ram-dev.properties
+++ b/config-client/ram-dev.properties
@@ -39,6 +39,6 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 global.swagger.path=com.egrand
 
 #auth2
-security.oauth2.resource.id=ram
-security.oauth2.resource.user-info-uri=http://192.168.109.1:21031/users/current
+#security.oauth2.resource.id=ram
+#security.oauth2.resource.user-info-uri=http://192.168.109.1:21031/users/current
 myoauth.white-list={"/user/query/**", "/role/query/**"}
