--- a/config-client/ram-dev.properties
+++ b/config-client/ram-dev.properties
@@ -41,4 +41,15 @@ global.swagger.path=com.egrand
 #auth2
 #security.oauth2.resource.id=ram
 #security.oauth2.resource.user-info-uri=http://192.168.109.1:21031/users/current
+
+# REDIS (RedisProperties)
+# Redis数据库索引（默认为0）
+spring.redis.database=1
+# Redis服务器地址
+spring.redis.host=127.0.0.1
+# Redis服务器连接端口
+spring.redis.port=6379
+# Redis服务器连接密码（默认为空）
+spring.redis.password=
+
 myoauth.white-list={"/user/query/**", "/role/query/**"}
