--- a/config-client/zuul-dev.properties
+++ b/config-client/zuul-dev.properties
@@ -20,6 +20,12 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=wiki
 spring.rabbitmq.password=wiki2012
 
+#数据库连接配置
+spring.datasource.url=jdbc:mysql://192.168.109.1:3306/spring-cloud-ram?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+
 ribbon.eureka.enabled=true
 feign.hystrix.enabled=true
 
