--- a/config-client/ram-dev.properties
+++ b/config-client/ram-dev.properties
@@ -52,4 +52,9 @@ spring.redis.port=6379
 # Redis服务器连接密码（默认为空）
 spring.redis.password=
 
+#mybatis plus 设置
+#实体扫描，多个package用逗号或者分号分隔
+mybatis-plus.typeAliasesPackage=com.egrand.cloud.ram.client.**.entity
+mybatis-plus.mapper-locations=classpath:mapper/*.xml
+
 myoauth.white-list={"/user/query/**", "/role/query/**"}
