--- a/config-client/oauth-dev.properties
+++ b/config-client/oauth-dev.properties
@@ -46,8 +46,8 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 security.oauth2.resource.filter-order=3
 
-feign.hystrix.enabled=true
-hystrix.command.default.execution.isolation.strategy=SEMAPHORE
+#feign.hystrix.enabled=true
+#hystrix.command.default.execution.isolation.strategy=SEMAPHORE
 
 security.oauth2.resource.user-info-uri=http://192.168.109.1:21031/users/current
 
