--- a/config-client/zuul-dev.properties
+++ b/config-client/zuul-dev.properties
@@ -26,21 +26,21 @@ spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
+#ribbon配置
 ribbon.eureka.enabled=true
-feign.hystrix.enabled=true
-
-zuul.max.host.connections=500
-zuul.host.socket-timeout-millis=60000
-zuul.host.connect-timeout-millis=60000
-
+#请求处理的超时时间
 ribbon.ReadTimeout=60000
+#请求连接的超时时间
 ribbon.ConnectTimeout=60000
+#对当前实例的重试次数
+ribbon.MaxAutoRetries=1
+#切换实例的重试次数
+ribbon.MaxAutoRetriesNextServer=1
+#对所有操作请求都进行重试
+ribbon.OkToRetryOnAllOperations=true
 
-zuul.sensitive-headers=Cookie,Set-Cookie,Authorization
-hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
-#hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=10000
-#hystrix.command.default.execution.timeout.enabled=false
-
+#feign配置
+feign.hystrix.enabled=true
 
 #zipkin配置参数
 spring.zipkin.base-url=http://192.168.109.128:21041
@@ -51,9 +51,8 @@ spring.sleuth.enabled=true
 management.security.enabled=false
 security.basic.enabled=false
 
-
+#oauth2配置
 security.oauth2.resource.user-info-uri=http://192.168.109.1:21031/users/current
-
 security.oauth2.client.clientId=service-hi
 security.oauth2.client.clientSecret=123456
 security.oauth2.client.accessTokenUri=http://192.168.109.1:21031/oauth/token
@@ -71,21 +70,14 @@ spring.redis.port=6379
 # Redis服务器连接密码（默认为空）
 spring.redis.password=
 
-# 连接池最大连接数（使用负值表示
-#zuul.routes.config.path=/config-api/**
-#zuul.routes.config.serviceId=config
-zuul.routes.zipkin-demo.path=/zipkin-demo/**
-zuul.routes.zipkin-demo.serviceId=zipkin-demo
-'
-zuul.routes.nbjcpt-portal.path=/nbjcpt-portal/**
-zuul.routes.nbjcpt-portal.serviceId=nbjcpt-portal
-zuul.routes.nbjcpt-log.path=/nbjcpt-log/**
-zuul.routes.nbjcpt-log.serviceId=nbjcpt-log
-zuul.routes.nbjcpt-message.path=/nbjcpt-message/**
-zuul.routes.nbjcpt-message.serviceId=nbjcpt-message
-
-
-
+#zuul配置
+zuul.max.host.connections=500
+zuul.host.socket-timeout-millis=60000
+zuul.host.connect-timeout-millis=60000
+zuul.sensitive-headers=Cookie,Set-Cookie,Authorization
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
+#hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=10000
+#hystrix.command.default.execution.timeout.enabled=false
 # zuul.ratelimit.key-prefix: your-prefix  #对应用来标识请求的key的前缀
 zuul.ratelimit.enabled=true
 #对应存储类型（用来存储统计信息）REDIS IN_MEMORY
@@ -102,40 +94,3 @@ zuul.ratelimit.default-policy.limit=2
 zuul.ratelimit.default-policy.refresh-interval=1
 #可选 限流方式 -user/-origin/-url
 zuul.ratelimit.default-policy.type=url
-
-
-#*********************************************************
-#  特定的路由
-#
-# 测试客户端 30秒内允许10个访问，并且要求总请求时间小于20秒
-#
-#*********************************************************
-#zuul.ratelimit.policies.zipkin-demo.limit=4
-##zuul.ratelimit.policies.zipkin-demo.quota=20
-#zuul.ratelimit.policies.zipkin-demo.refreshInterval=1
-#zuul.ratelimit.policies.zipkin-demo.type[0].type=url
-#zuul.ratelimit.policies.zipkin-demo.type[0].matcher=/
-#*********************************************************
-#  特定的路由,各自有自己的限流规则
-#
-# 测试客户端 1秒内允许10个访问，
-# 不设置并且要求总请求时间小于20秒
-#
-#*********************************************************
-zuul.ratelimit.policy-list.zipkin-demo.[0].limit=10
-#zuul.ratelimit.policy-list.zipkin-demo.[0].quota=20
-zuul.ratelimit.policy-list.zipkin-demo.[0].refreshInterval=1
-zuul.ratelimit.policy-list.zipkin-demo.[0].type[0].type=url
-zuul.ratelimit.policy-list.zipkin-demo.[0].type[0].matcher=/hello
-
-zuul.ratelimit.policy-list.zipkin-demo.[1].limit=10
-#zuul.ratelimit.policy-list.zipkin-demo.[1].quota=4
-zuul.ratelimit.policy-list.zipkin-demo.[1].refreshInterval=1
-zuul.ratelimit.policy-list.zipkin-demo.[1].type[0].type=url
-zuul.ratelimit.policy-list.zipkin-demo.[1].type[0].matcher=/test
-
-zuul.ratelimit.policy-list.zipkin-demo.[2].limit=10
-#zuul.ratelimit.policy-list.zipkin-demo.[2].quota=4
-zuul.ratelimit.policy-list.zipkin-demo.[2].refreshInterval=1
-zuul.ratelimit.policy-list.zipkin-demo.[2].type[0].type=url
-zuul.ratelimit.policy-list.zipkin-demo.[2].type[0].matcher=/hi
