--- a/config-client/ram-dev.properties
+++ b/config-client/ram-dev.properties
@@ -13,13 +13,10 @@ eureka.instance.lease-renewal-interval-in-seconds=10
 eureka.client.fetch-registry=true
 eureka.instance.status-page-url=http://${eureka.instance.ip-address}:${server.port}/swagger-ui.html
 
-#注册中心地址
-eureka.client.serviceUrl.defaultZone=http://192.168.109.128:19001/eureka/,http://192.168.109.128:19002/eureka/,http://192.168.109.128:19003/eureka/
-
 #配置中心消息总线配置
 spring.cloud.bus.trace.enabled=true
 
-#oauth2数据库连接配置
+#数据库连接配置
 spring.datasource.url=jdbc:mysql://192.168.109.1:3306/spring-cloud-ram?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=123456
@@ -27,10 +24,6 @@ spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
 #swagger
 global.swagger.path=com.egrand
-
-#auth2
-#security.oauth2.resource.id=ram
-#security.oauth2.resource.user-info-uri=http://192.168.109.1:21031/users/current
 
 #mybatis plus 设置
 #实体扫描，多个package用逗号或者分号分隔
