--- a/config-client/common-dev.properties
+++ b/config-client/common-dev.properties
@@ -8,6 +8,9 @@ security.oauth2.client.userAuthorizationUri=http://192.168.109.1:21031/oauth/aut
 security.oauth2.client.accessTokenUri=http://192.168.109.1:21031/oauth/token
 security.oauth2.resource.token-info-uri=http://192.168.109.1:21031/oauth/check_token
 security.oauth2.resource.user-info-uri=http://192.168.109.1:21031/users/current
-
 egrand.client.oauth2.admin.client-id=service-hi
 egrand.client.oauth2.admin.client-secret=123456
+
+
+#swagger
+global.swagger.path=com.egrand
