--- a/config-client/zipkin-test.properties
+++ b/config-client/zipkin-test.properties
@@ -1,4 +1,4 @@
-hello=test22
+hello=test
 
 server.port=21041
 spring.application.name=zipkin
@@ -9,16 +9,8 @@ eureka.instance.instance-id=${eureka.instance.ip-address}:${server.port}
 eureka.instance.lease-expiration-duration-in-seconds=10
 eureka.instance.lease-renewal-interval-in-seconds=10
 
-#注册中心地址
-eureka.client.serviceUrl.defaultZone=http://192.168.109.128:19001/eureka/,http://192.168.109.128:19002/eureka/,http://192.168.109.128:19003/eureka/
-
 #配置中心消息总线配置
 spring.cloud.bus.trace.enabled=true
-#配置中心消息总线配置的mq配置
-spring.rabbitmq.host=192.168.109.128
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=wiki
-spring.rabbitmq.password=wiki2012
 
 #数据库配置
 zipkin.storage.type=mysql
