--- a/config-client/turbine-dev.properties
+++ b/config-client/turbine-dev.properties
@@ -12,6 +12,12 @@ eureka.instance.lease-renewal-interval-in-seconds=10
 #配置中心消息总线配置
 spring.cloud.bus.trace.enabled=true
 
+#数据库连接配置
+spring.datasource.url=jdbc:mysql://192.168.109.1:3306/spring-cloud-ram?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+
 turbine.aggregator.clusterConfig=default
 turbine.appConfig=EUREKA-DEMO
 turbine.aggregator.cluster-config=default
