--- a/config-client/turbine-test.properties
+++ b/config-client/turbine-test.properties
@@ -19,7 +19,7 @@ spring.datasource.password=123456
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
 turbine.aggregator.clusterConfig=default
-turbine.appConfig=EUREKA-DEMO
+turbine.appConfig=EGRAND-RAM
 turbine.aggregator.cluster-config=default
 turbine.cluster-name-expression=new String("default")
 #turbine.instanceUrlSuffix=manage/hystrix.stream
