--- a/config-client/common-dev.properties
+++ b/config-client/common-dev.properties
@@ -13,4 +13,5 @@ egrand.client.oauth2.admin.client-secret=123456
 
 
 #swagger
-global.swagger.path=com.egrand
+egrand.swagger2.enabled=true
+egrand.swagger2.path=com.egrand
