--- a/config-client/es-dev.properties
+++ b/config-client/es-dev.properties
@@ -1,3 +1,4 @@
+egd.elasticsearch.enabled=true
 egd.elasticsearch.hostName=192.168.109.128
 egd.elasticsearch.port=9300
 egd.elasticsearch.pool-size=5
