--- a/config-client-ico/zipkin-dev.properties
+++ b/config-client-ico/zipkin-dev.properties
@@ -20,8 +20,7 @@ spring.datasource.password=123456
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
 #zipkin配置参数
-#spring.sleuth.sampler.percentage=1.0
-spring.sleuth.enabled=false
+spring.sleuth.sampler.probability=1.0
 
 #关闭权限
 management.security.enabled=false
