--- a/config-client/zipkin-dev.properties
+++ b/config-client/zipkin-dev.properties
@@ -14,15 +14,28 @@ eureka.instance.lease-renewal-interval-in-seconds=10
 spring.cloud.bus.trace.enabled=true
 
 #数据库配置
-zipkin.storage.type=mysql
+spring.datasource.name=zipkin
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.url=jdbc:mysql://192.168.109.1:3306/egrand-zipkin?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
-#zipkin配置参数
-spring.sleuth.sampler.probability=1.0
+#ES Storage配置
+#zipkin.storage.type=mysql
+zipkin.storage.type=elasticsearch
+zipkin.storage.elasticsearch.cluster=elasticsearch
+zipkin.storage.elasticsearch.hosts=http://192.168.109.128:9200
+zipkin.storage.elasticsearch.index=zipkin
+zipkin.storage.elasticsearch.index-shards=5
+zipkin.storage.elasticsearch.index-replicas=1
 
-#关闭权限
-management.security.enabled=false
-security.basic.enabled=false
+#zipkin配置参数
+zipkin.collector.rabbitmq.addresses=10.101.15.159:5672
+zipkin.collector.rabbitmq.password=wiki
+zipkin.collector.rabbitmq.username=wiki2012
+zipkin.collector.rabbitmq.queue=zipkin
+
+#spring.sleuth.sampler.probability=1.0
+#zipkin启动报错无法访问的解决方法
+management.metrics.web.server.auto-time-requests=false
