--- a/config-client/turbine-dev.properties
+++ b/config-client/turbine-dev.properties
@@ -18,10 +18,13 @@ spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
-turbine.aggregator.clusterConfig=default
-turbine.appConfig=EGRAND-RAM
+#turbine聚合
+# 指定聚合哪些集群，多个使用","分割，默认为default。可使用http://.../turbine.stream?cluster={clusterConfig之一}访问
 turbine.aggregator.cluster-config=default
-turbine.cluster-name-expression=new String("default")
+turbine.cluster-name-expression= new String("default")
+turbine.appConfig=EGRAND-RAM
+#这里和被监控启动类里的 registrationBean.addUrlMappings("/hystrix.stream")一致
+turbine.instanceUrlSuffix=/actuator/hystrix.stream
 #turbine.instanceUrlSuffix=manage/hystrix.stream
 
 #关闭权限
