--- a/config-client/zipkin-test.properties
+++ b/config-client/zipkin-test.properties
@@ -2,6 +2,7 @@ hello=test
 
 server.port=21041
 spring.application.name=zipkin
+spring.main.allow-bean-definition-overriding=true
 
 eureka.instance.prefer-ip-address=true
 eureka.instance.ip-address=192.168.109.128
@@ -13,16 +14,32 @@ eureka.instance.lease-renewal-interval-in-seconds=10
 spring.cloud.bus.trace.enabled=true
 
 #数据库配置
-zipkin.storage.type=mysql
+spring.datasource.name=zipkin
+#spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.url=jdbc:mysql://192.168.109.1:3306/egrand-zipkin?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
-#zipkin配置参数
-#spring.sleuth.sampler.percentage=1.0
-spring.sleuth.enabled=false
+#ES Storage配置
+#zipkin.storage.type=mysql
+zipkin.storage.type=elasticsearch
+zipkin.storage.StorageComponent=elasticsearch
+zipkin.storage.elasticsearch.cluster=docker-cluster
+zipkin.storage.elasticsearch.hosts=http://192.168.109.128:9200
+zipkin.storage.elasticsearch.index=zipkin
+zipkin.storage.elasticsearch.index-shards=5
+zipkin.storage.elasticsearch.index-replicas=1
 
-#关闭权限
-management.security.enabled=false
-security.basic.enabled=false
+#zipkin配置参数
+zipkin.collector.rabbitmq.addresses=192.168.109.128:5672
+zipkin.collector.rabbitmq.username=wiki
+zipkin.collector.rabbitmq.password=wiki2012
+zipkin.collector.rabbitmq.queue=zipkin
+
+#表示当前程序不使用sleuth
+spring.sleuth.enabled=false
+spring.sleuth.sampler.percentage=1
+
+#zipkin启动报错无法访问的解决方法
+management.metrics.web.server.auto-time-requests=false
