--- a/config-client/admin-dev.properties
+++ b/config-client/admin-dev.properties
@@ -31,23 +31,15 @@ spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
-#设置hystrix超时时间，默认1000毫秒
-hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=10000
-#hystrix.command.default.execution.timeout.enabled=false
+feign.hystrix.enabled=true
+hystrix.command.default.execution.timeout.enabled=true
+#设置hystrix超时时间，默认3000毫秒
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=30000
 
 #admin 配置文件
 spring.boot.admin.routes.endpoints=env,metrics,dump,jolokia,info,configprops,trace,logfile,refresh,flyway,liquibase,heapdump,loggers,auditevents,hystrix.stream,activiti
 spring.boot.admin.turbine.clusters=default
 spring.boot.admin.turbine.location=turbine
-
-endpoints.health.sensitive=false
-endpoints.health.enabled=true
-
-endpoints.actuator.enabled=true
-endpoints.actuator.sensitive=false
-
-endpoints.beans.sensitive=false
-endpoints.beans.enabled=true
 
 #关闭权限
 management.security.enabled=false
