--- a/config-client/common-dev.properties
+++ b/config-client/common-dev.properties
@@ -11,6 +11,8 @@ security.oauth2.resource.user-info-uri=http://192.168.109.128:21032/users/curren
 egrand.client.oauth2.admin.client-id=service-hi
 egrand.client.oauth2.admin.client-secret=123456
 
+management.health.elasticsearch.enabled=false
+
 
 #swagger
 egrand.swagger2.enabled=true
