--- a/config-client/zuul-dev.properties
+++ b/config-client/zuul-dev.properties
@@ -28,7 +28,7 @@ zuul.host.connect-timeout-millis=60000
 ribbon.ReadTimeout=60000
 ribbon.ConnectTimeout=60000
 
-zuul.sensitive-headers=Cookie,Set-Cookie,Authorization
+#zuul.sensitive-headers=Cookie,Set-Cookie,Authorization
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
 #hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=10000
 #hystrix.command.default.execution.timeout.enabled=false
