--- a/config-client/zuul-dev.properties
+++ b/config-client/zuul-dev.properties
@@ -21,17 +21,41 @@ spring.datasource.driverClassName=com.mysql.jdbc.Driver
 ribbon.eureka.enabled=true
 feign.hystrix.enabled=true
 
-zuul.max.host.connections=500
-zuul.host.socket-timeout-millis=60000
-zuul.host.connect-timeout-millis=60000
-
-ribbon.ReadTimeout=60000
-ribbon.ConnectTimeout=60000
+#请求连接的超时时间
+ribbon.ConnectTimeout=2000
+#对当前实例的重试次数
+ribbon.MaxAutoRetries=1
+#切换实例的重试次数
+ribbon.MaxAutoRetriesNextServer=1
+#对所有操作请求都进行重试
+ribbon.OkToRetryOnAllOperations=true
+#请求处理的超时时间
+ribbon.ReadTimeout=5000
 
 #zuul.sensitive-headers=Cookie,Set-Cookie,Authorization
-hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=30000
 #hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=10000
 #hystrix.command.default.execution.timeout.enabled=false
+
+zuul.retryable=true
+zuul.add-host-header=true
+
+zuul.host.connect-timeout-millis=10000
+zuul.host.max-per-route-connections=500
+zuul.host.max-total-connections=1000
+zuul.host.socket-timeout-millis=60000
+
+zuul.ignored-services='*'
+
+zuul.ratelimit.behind-proxy=true
+zuul.ratelimit.enabled=true
+zuul.ratelimit.key-prefix=cloud_rate_limit
+zuul.ratelimit.repository=REDIS
+zuul.ratelimit.add-response-headers=false
+
+zuul.semaphore.max-semaphores=1000
+
+zuul.sensitive-headers=''
 
 
 #zipkin配置参数
@@ -42,20 +66,3 @@ spring.sleuth.enabled=true
 #关闭权限
 management.security.enabled=false
 security.basic.enabled=false
-
-# zuul.ratelimit.key-prefix: your-prefix  #对应用来标识请求的key的前缀
-zuul.ratelimit.enabled=true
-#对应存储类型（用来存储统计信息）REDIS IN_MEMORY
-zuul.ratelimit.repository=REDIS
-#代理之后
-zuul.ratelimit.behind-proxy=true
-# zuul.ratelimit.default-policy #可选 - 针对所有的路由配置的策略，除非特别配置了policies
-#可选 - 每个刷新时间窗口对应的请求数量限制
-zuul.ratelimit.default-policy.limit=2
-#可选-  每个刷新时间窗口对应的请求时间限制（秒）
-#zuul.ratelimit.default-policy.quota=2
-#zuul.ratelimit.default-policy-list.quota=10000
-# 刷新时间窗口的时间，默认值 (秒)
-zuul.ratelimit.default-policy.refresh-interval=1
-#可选 限流方式 -user/-origin/-url
-zuul.ratelimit.default-policy.type=url
